--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -5,55 +5,48 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>WeedSet</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.PlantSet.PlantCommonName)
-        </dt>
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+        <h2 class="col-xs-12" style="text-align:center;">Weed detail information</h2>
+        <img class="col-xs-12 col-lg-6 col-lg-offset-3" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
+        <hr />
+        <dl class="col-xs-12 col-lg-6 col-lg-offset-3 dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.WeedCommonName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.PlantSet.PlantCommonName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.WeedCommonName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WeedCommonName)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.WeedSciName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.WeedCommonName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.WeedSciName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WeedSciName)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.WeedDesc)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.WeedSciName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.WeedDesc)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WeedPhotoPath)
-        </dt>
+            <dt>
+                Replace indigene
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.WeedPhotoPath)
-        </dd>
+            <dd>
+                <a href="@Url.Content("~/PlantSets/Details/" + Model.PlantSet.Id)"> @Html.DisplayFor(model => model.PlantSet.PlantCommonName)</a>
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WeedDesc)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WeedDesc)
-        </dd>
-
-    </dl>
+        </dl>
+        <p class="col-xs-12">
+            @Html.ActionLink("Back to List", "Index")
+        </p>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
