--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -2,29 +2,30 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml"; 
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>UserPlantSet</h4>
+
+    <div class="form-horizontal col-md-8 col-md-offset-2">
+        <h2>Add to My Garden List</h2>
+        <p>When the plant add to my garden, the frequency timer will start.</p>
+        <p>Set 0 for the frequency which you do not want to use</p>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.PlantId, "PlantId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("PlantId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("PlantId", null, htmlAttributes: new { @disabled = "disabled", @class = "form-control" })
+                @Html.HiddenFor(model => model.PlantId, new { htmlAttributes = new { @class = "form-control" },Value = ViewBag.SelectId })
                 @Html.ValidationMessageFor(model => model.PlantId, "", new { @class = "text-danger" })
             </div>
         </div>
-
-
 
         <div class="form-group">
             @Html.LabelFor(model => model.plantNickName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -37,15 +38,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PlantWaterFrq, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @type = "number", @class = "text-danger" })  Recommended frequency: @ViewBag.PlantWaterFrq Days
+                @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantWaterFrq Days
+                @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @type = "number", @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.PlantPruningFrq, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantPruningFrq Days
                 @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @type = "number", @class = "text-danger" })
             </div>
         </div>
@@ -53,7 +54,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PlantFertilizerFrq, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantFertilizerFrq Days
                 @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @type = "number", @class = "text-danger" })
             </div>
         </div>
@@ -61,23 +62,26 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PlantMistFrq, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantMistFrq Days
                 @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @type = "number", @class = "text-danger" })
             </div>
-        </div> 
+        </div>
 
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
+            <div class="col-md-offset-2 col-md-10">
+            @Html.ActionLink("Back to List", "Index")
         </div>
+        </div>
+
+        
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
