--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="opacity:0.8">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="~/Home/index.html" style="padding-top:0px;"><img id="logo" src="~/Picture/logo.png" height="50"></a>           
+                <a class="navbar-brand" href="~/Home/index.html" style="padding-top:5px;"><img id="logo" src="~/Picture/logo.png" height="40"></a>           
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid body-content" style="padding-right:0px;padding-left:0px;">
+    <div class="container-fluid body-content" style="margin-top:0px;padding-right:0px;padding-left:0px;">
         @RenderBody()
         
         
