--- a/PlottedAssist/Views/PlantSets/GetPlantData.cshtml
+++ b/PlottedAssist/Views/PlantSets/GetPlantData.cshtml
@@ -11,7 +11,7 @@
 
 <!--Header-->
 
-<div style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
+<div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
     <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
         <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
     </div>
@@ -54,13 +54,13 @@
     @foreach (var item in Model)
     {
         <!--Plant display-->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card" style="padding:15px;width:280px;margin-top:20px;">
-                <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail">
-                    <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail">
-                    <div class="caption">
-                        <p>@Html.DisplayFor(modelItem => item.PlantCommonName)</p>
-                        <p>@Html.DisplayFor(modelItem => item.PlantSciName)</p>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="card" style="padding:15px;width:280px;margin-top:20px;border-radius:15px;">
+                <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
+                    <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail" style="border-radius:15px;">
+                    <div class="caption" style="position:absolute; width:100%; padding-top:55%; padding-left:10%; font-family:'Arial';font-size:16px; left:0px; top:0px">
+                        <p class="white-word">@Html.DisplayFor(modelItem => item.PlantCommonName)</p>
+                        <p class="white-word">@Html.DisplayFor(modelItem => item.PlantSciName)</p>
                     </div>
                 </a>
             </div>
